# cses

./: .gitignore  Cargo.toml  README.md  justfile  pyproject.toml
python/: 1068_weird_algorithm.py  1069_repetitions.py  1070_permutations.py  1071_number_spiral.py  1073_towers.py  1074_stick_lengths.py  1083_missing_number.py  1084_apartments.py  1090_ferris_wheel.py  1091_concert_tickets.py  1092_two_sets.py  1094_increasing_array.py  1141_playlist.py  1158_book_shop.py  1192_counting_rooms.py  1193_labyrinth.py  1618_trailing_zeros.py  1619_restaurant_customers.py  1620_factory_machines.py  1621_distinct_numbers.py  1622_creating_strings.py  1623_apple_division.py  1629_movie_festival.py  1630_tasks_and_deadlines.py  1633_dice_combinations.py  1634_minimizing_coins.py  1635_coin_combinations_i.py  1636_coin_combinations_ii.py  1637_removing_digits.py  1638_grid_paths.py  1640_sum_of_two_values.py  1643_maximum_subarray_sum.py  1674_subordinates.py  1754_coin_piles.py  1755_palindrome_reorder.py  2183_missing_coin_sum.py
src/: 1068_weird_algorithm.rs  1069_repetitions.rs  1070_permutations.rs  1071_number_spiral.rs  1073_towers.rs  1074_stick_lengths.rs  1083_missing_number.rs  1084_apartments.rs  1090_ferris_wheel.rs  1091_concert_tickets.rs  1094_increasing_array.rs  1141_playlist.rs  1158_book_shop.rs  1192_counting_rooms.rs  1193_labyrinth.rs  1618_trailing_zeros.rs  1619_restaurant_customers.rs  1620_factory_machines.rs  1621_distinct_numbers.rs  1623_apple_division.rs  1629_movie_festival.rs  1630_tasks_and_deadlines.rs  1633_dice_combinations.rs  1634_minimizing_coins.rs  1635_coin_combinations_i.rs  1636_coin_combinations_ii.rs  1637_removing_digits.rs  1638_grid_paths.rs  1640_sum_of_two_values.rs  1643_maximum_subarray_sum.rs  1754_coin_piles.rs  1755_palindrome_reorder.rs  2183_missing_coin_sum.rs  weird_algorithm.rs
